ViewPager code unstable app

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
             android:enabled="true"
             android:exported="false" />
 
-        <activity android:name=".ui.activities.timingsactivity.temp"></activity>
+        <activity android:name=".ui.activities.timingsactivity.temp" />
     </application>
 
 </manifest>
